--- a/public/assets/css/cadastro-anunciante.css
+++ b/public/assets/css/cadastro-anunciante.css
@@ -272,8 +272,8 @@ form button:hover{
 }
 
 .carousel-slide img {
-    width: 110%;
-    height: 100%;
+    width: 100%;
+    height: auto;
 
 }
 
@@ -299,7 +299,7 @@ form button:hover{
 
 @media screen and (max-width: 1000px){
 
-    .cont-carousel{
+    .carousel-container{
         display: none;
     }
     .container-conteudo{
