--- a/public/assets/css/style-dashboard.css
+++ b/public/assets/css/style-dashboard.css
@@ -269,7 +269,34 @@ aside .sidebar .message-count{
 main{
     margin-top: 1.4rem;
 }
-
+main .cont-acoes{
+    display: flex;
+    margin-top: 10px;
+    justify-content: start;
+    align-items: center;
+}
+main .cont-acoes a{
+    display: flex;
+    padding: 20px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    min-width:90px;
+    height: 50px;
+    background-color: var(--color-primary);
+    text-align: center;
+    color: var(--color-white);
+    font-family: 'Fredoka';
+    font-size: 14px;
+    font-weight: bold;
+    margin: 20px;
+    cursor: pointer;
+    transition: all ease-in-out 0.2s;
+}
+main .cont-acoes a:hover{
+    background-color: rgb(120, 38, 68) ;
+    transform: scale(1.04);
+}
 main .date{
     display: inline-block;
     background: var(--color-light);
