--- a/public/assets/css/style-perfil.css
+++ b/public/assets/css/style-perfil.css
@@ -109,3 +109,145 @@
   font-size: 15px;
   font-weight: 600;
 }
+.container button{
+  justify-content: center;
+  align-items: center;
+  width: 40%;
+  padding: 10px;
+  border: none;
+  border-radius: 10px;
+  background-color: #ff85ab;
+  font-family: 'Inter';
+  color: white;
+  margin-right: 10px;
+  cursor: pointer;
+  transition: all 0.2s ease;
+  margin-top: 20px;
+}
+button:hover{
+  background-color: #ef6d96;
+    transform: scale(1.01);
+}
+.box-modal-post .modal-denuncia{
+    
+  width: 500px; /* Ajuste o tamanho conforme necessário */
+  border: solid 1px #ccc;
+  border-radius: 8px;
+  padding: 20px;
+  background: white;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  justify-content: center;
+  align-items: center;
+  top: 50%; /* Posiciona o topo do modal no meio da tela */
+  left: 50%; /* Posiciona a esquerda do modal no meio da tela */
+  transform: translate(-50%, -50%); /* Ajusta o modal para que o centro esteja no meio da tela */
+  max-width: 90%; /* Adapta o modal em telas menores */
+  max-height: 80%; /* Adapta a altura do modal em telas menores */
+  overflow: auto; /* Permite rolagem se o conteúdo exceder a altura */
+}
+
+.modal-denuncia .cont-modal-denuncia .cont-header-modal{
+  display: flex;
+  width: 100%;
+  justify-content: end;
+  align-items: center;
+}
+
+.modal-denuncia .cont-modal-denuncia{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
+
+.modal-denuncia .cont-modal-denuncia .cont-header-modal button{
+  display: flex;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+.modal-denuncia .cont-header-modal button i{
+  font-size: 20px;
+}
+.modal-denuncia .cont-modal-denuncia .cont-header-modal button:focus{
+  border: none;
+  outline: none;
+}
+.modal-denuncia .cont-modal-denuncia .cont-header-modal button:active{
+  border: none;
+  outline: none;
+}
+.modal-denuncia form {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  flex-direction:column ;
+  
+}
+
+.modal-denuncia form .cont-btn-criar-post button{
+  justify-content: center;
+  align-items: center;
+  width: 40%;
+  padding: 10px;
+  border: none;
+  border-radius: 10px;
+  background-color: #ff85ab;
+  font-family: 'Inter';
+  color: white;
+  margin-right: 10px;
+  cursor: pointer;
+  transition: all 0.2s ease;
+  margin-top: 20px;
+}
+ .modal-denuncia form .cont-btn-criar-post button:hover{
+  background-color: #ef6d96;
+  transform: scale(1.01);
+}
+
+.modal-denuncia form  label{
+  display: flex;
+  width: 100%;
+  justify-content: start;
+  align-items: center;
+  font-family: 'inter';
+  font-weight: bold;
+  text-align: center;
+  color: #003366;
+}
+.modal-denuncia form textarea{
+  width: 100%;
+  height: 200px;
+  padding: 10px;
+  border: 2px #f26699 solid;
+  border-radius: 10px;
+  transition: all 0.3s ease;
+  font-size: 15px;
+  resize: none;
+}
+
+.modal-denuncia form input{
+  width: 100%;
+  
+  padding: 10px;
+  border: 2px #f26699 solid;
+  border-radius: 10px;
+  transition: all 0.3s ease;
+  font-size: 15px;
+}
+.modal-denuncia form input:focus{
+  border: 4px solid #F26699;
+  transform: scale(1.01);
+  outline:none;
+}
+.modal-denuncia form textarea:focus{
+  border: 4px solid #F26699;
+  transform: scale(1.01);
+  outline:none;
+}
+.modal-denuncia form .cont-btn-criar-post{
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
