--- a/public/assets/css/login-adm.css
+++ b/public/assets/css/login-adm.css
@@ -35,8 +35,7 @@ header{
     height: auto;
     justify-content: center;
     align-items: center;
- 
-    
+    margin-top: 20px;
 }
 
 .logo{
@@ -67,7 +66,7 @@ main{
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100%;
+    height: 75vh;
 }
 
 .cont-conteudo{
