--- a/public/assets/css/style-dashboard.css
+++ b/public/assets/css/style-dashboard.css
@@ -133,7 +133,14 @@ small{
     width: 2.8rem;
     height: 2.8rem;
     border-radius: 50%;
+
     overflow: hidden;
+}
+.profile-photo img{
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    object-fit: fill;
 }
 
 .text-muted{
