--- a/public/assets/css/style-dashboard.css
+++ b/public/assets/css/style-dashboard.css
@@ -332,7 +332,7 @@ main .insights > div{
     border-radius: var(--card-border-radius);
     margin-top: 1rem;
     transition: all 300ms ease;
-    width: 300px;
+    width: 295px;
 }
 
 main .insights > div:hover{
@@ -369,11 +369,6 @@ main .insights > div .middle{
 }
 
 
-.grafico{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 
 .counter{
     display: flex;
@@ -425,11 +420,16 @@ main table tbody tr:last-child td{
     border: none;
 }
 
-main .recent-orders a{
+.link-mostrar{
     text-align: center;
+    color: var(--color-primary);
     display: block;
     margin: 1rem auto;
-    color: var(--color-primary);
+    width: 10%;
+}
+
+.link-mostrar:hover{
+    color: #bd5b7f;
 }
 
 .right{
