--- a/public/assets/css/style-cadastro.css
+++ b/public/assets/css/style-cadastro.css
@@ -30,7 +30,6 @@ body{
 .container-conteudo{
     display: flex;
     min-width: 100%;
-   
     justify-content: center;
     align-items: center;
     height: 100vh;
@@ -43,12 +42,14 @@ body{
 .cont-img-mobile img{
     width: 40%;
 }
+
 .cont-form{
     display: flex;
-    width: 54%;
+    width: 50%;
     height: 100%;
     justify-content: center;
     align-items: center;
+    background-color: #f4d1de;
 }
 
 .box-form{
